turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:14: error: ';' expected but ',' found.
var rule:Array[Array[Array[Int]]] = {{{1, RIGHT , 1}, {0, LEFT  , 0}}, {{1, RIGHT , 2}, {0, NOTURN, 0}}, {{1, LEFT  , 0}, {0, LEFT  , 0}}} // Change this
                                        ^Turmite:14: error: ';' expected but ',' found.
var rule:Array[Array[Array[Int]]] = {{{1, RIGHT , 1}, {0, LEFT  , 0}}, {{1, RIGHT , 2}, {0, NOTURN, 0}}, {{1, LEFT  , 0}, {0, LEFT  , 0}}} // Change this
                                                    ^Turmite:14: error: ';' expected but ',' found.
var rule:Array[Array[Array[Int]]] = {{{1, RIGHT , 1}, {0, LEFT  , 0}}, {{1, RIGHT , 2}, {0, NOTURN, 0}}, {{1, LEFT  , 0}, {0, LEFT  , 0}}} // Change this
                                                                     ^